--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
-    "react-stripe-elements": "^2.0.3",
-    "redux": "^4.0.1"
+    "react-stripe-elements": "^2.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
