--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,6 +18,14 @@
             "name": "Attach to Chrome",
             "port": 9222,
             "webRoot": "${workspaceFolder}"
+        }, 
+        {
+            "name": "Launch Edge Chromium",
+            "type": "edge",
+            "request": "launch",
+            "version": "canary",
+            "url": "http://localhost:3000",
+            "webRoot": "${workspaceFolder}/wwwroot"
         }
     ]
 }
